--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+# why do you have these here
 GROQ_API_KEY=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
 DB_HOST=auth-db1427.hstgr.io
 DB_USER=u234521418_test
